Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Trộm cả xe cà phê xanh khi giá cà phê tăng kỷ lục ở Mỹ",
+    "content": "Tại Mỹ, tình trạng trộm cắp cà phê xanh trên xe tải đang gia tăng do giá cà phê tăng cao kỷ lục. Các băng nhóm tội phạm tổ chức giả danh công ty vận tải để lấy hàng và sau đó biến mất cùng với lô hàng. Năm vừa qua, hàng chục vụ trộm cắp đã xảy ra, gây thiệt hại lớn cho các nhà nhập khẩu. Để đối phó, một số nhà nhập khẩu đã bắt đầu gắn thiết bị theo dõi vào bao cà phê nhằm giảm nguy cơ mất cắp.",
+    "link": "https://tuoitre.vn/trom-ca-xe-ca-phe-xanh-khi-gia-ca-phe-tang-ky-luc-o-my-20250311121615039.htm",
+    "cat": "kinh-doanh",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao tình trạng trộm cắp cà phê xanh lại gia tăng ở Mỹ?",
+    "answers": [
+      {
+        "text": "Do giá cà phê tăng cao kỷ lục.",
+        "correct": true
+      },
+      {
+        "text": "Vì nhu cầu cà phê giảm sút.",
+        "correct": false
+      },
+      {
+        "text": "Bởi vì sản xuất cà phê ở Mỹ tăng.",
+        "correct": false
+      },
+      {
+        "text": "Do lượng cà phê nhập khẩu giảm.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ủy ban Chứng khoán 'chốt' lộ trình vận hành hệ thống KRX",
     "content": "Ủy ban Chứng khoán vừa công bố lộ trình vận hành hệ thống KRX, dự kiến sẽ chính thức hoạt động vào tháng 5 hoặc tháng 6 năm 2025. Trước đó, HoSE đã thông báo cho các công ty chứng khoán về việc chuẩn bị dữ liệu để kiểm thử hệ thống. Đáng chú ý, năm nay, quyết tâm của cơ quan quản lý thị trường chứng khoán rõ ràng hơn so với năm ngoái, khi hệ thống KRX đã nhiều lần bị trì hoãn.",
     "link": "https://tuoitre.vn/uy-ban-chung-khoan-chot-lo-trinh-van-hanh-he-thong-krx-20250311125209169.htm",
@@ -174,6 +201,33 @@
       },
       {
         "text": "Tháng 2 năm 2024",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đình chỉ nữ giáo viên tự ý cắt tóc học sinh trong lớp học",
+    "content": "Một nữ giáo viên tại Trường THCS Quang Chiểu, huyện Mường Lát, tỉnh Thanh Hóa đã bị đình chỉ công tác 3 ngày sau khi tự ý cắt tóc của học sinh trong lớp học. Sự việc xảy ra vào ngày 5/3 khi cô Bùi Thị Thu phát hiện học sinh không mang vở và quyết định cắt một phần tóc mái của em để giúp học sinh dễ nhìn hơn. Tuy nhiên, hành động này đã khiến phụ huynh bức xúc và phản ánh đến nhà trường, dẫn đến quyết định đình chỉ công tác của cô giáo.",
+    "link": "https://dantri.com.vn/giao-duc/dinh-chi-nu-giao-vien-tu-y-cat-toc-hoc-sinh-trong-lop-hoc-20250311143850547.htm",
+    "cat": "giao-duc",
+    "positivity": 3,
+    "importance": 6,
+    "question": "Tại sao nữ giáo viên bị đình chỉ công tác?",
+    "answers": [
+      {
+        "text": "Cô cắt tóc học sinh trong lớp học",
+        "correct": true
+      },
+      {
+        "text": "Cô không dạy đúng chương trình",
+        "correct": false
+      },
+      {
+        "text": "Cô không có bằng cấp",
+        "correct": false
+      },
+      {
+        "text": "Cô đến muộn trong giờ dạy",
         "correct": false
       }
     ]
@@ -2622,32 +2676,28 @@
     ]
   },
   {
-    "title": "Người trẻ chọn sếp",
-    "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
-    "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
+    "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
+    "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
+    "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
+    "cat": "oto-xe-may",
+    "positivity": 5,
     "importance": 7,
-    "question": "Tại sao người trẻ lại chọn sếp khi tìm việc?",
+    "question": "Tại sao tài xế xe con nên giảm tốc độ khi thấy xe tải đỗ bên đường?",
     "answers": [
       {
-        "text": "Vì họ muốn làm việc với người có khả năng lãnh đạo tốt và phù hợp với phong cách làm việc của mình.",
+        "text": "Để tránh va chạm khi xe tải mở cửa bất ngờ.",
         "correct": true
       },
       {
-        "text": "Bởi vì họ thích làm việc trong môi trường có nhiều cơ hội thăng tiến.",
+        "text": "Để tiết kiệm nhiên liệu.",
         "correct": false
       },
       {
-        "text": "Vì họ ưu tiên lương thưởng cao hơn mọi yếu tố khác.",
+        "text": "Để tăng tốc độ di chuyển.",
         "correct": false
       },
       {
-        "text": "Bởi vì họ không muốn làm việc dưới sự quản lý nghiêm khắc.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ muốn có thời gian làm việc thoải mái.",
+        "text": "Để giảm tiếng ồn khi lái xe.",
         "correct": false
       }
     ]
@@ -2684,33 +2734,6 @@
     ]
   },
   {
-    "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
-    "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
-    "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
-    "cat": "oto-xe-may",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Tại sao tài xế xe con nên giảm tốc độ khi thấy xe tải đỗ bên đường?",
-    "answers": [
-      {
-        "text": "Để tránh va chạm khi xe tải mở cửa bất ngờ.",
-        "correct": true
-      },
-      {
-        "text": "Để tiết kiệm nhiên liệu.",
-        "correct": false
-      },
-      {
-        "text": "Để tăng tốc độ di chuyển.",
-        "correct": false
-      },
-      {
-        "text": "Để giảm tiếng ồn khi lái xe.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tỷ phú Elon Musk chỉ cách vui vẻ, tự tin học tập dù AI phát triển bùng nổ",
     "content": "Tỷ phú Elon Musk gần đây đã chia sẻ hai lời khuyên cho những người trẻ trong bối cảnh trí tuệ nhân tạo (AI) phát triển mạnh mẽ, có khả năng thay thế nhiều công việc. Ông khuyến khích giới trẻ nên theo đuổi đam mê và trở nên hữu ích cho cộng đồng. Musk cũng nhấn mạnh tầm quan trọng của nỗ lực lao động để thích ứng với sự thay đổi do AI mang lại, đồng thời khuyến khích mọi người không nên nản lòng trước sự cạnh tranh từ công nghệ.",
     "link": "https://dantri.com.vn/giao-duc/ty-phu-elon-musk-chi-cach-vui-ve-tu-tin-hoc-tap-du-ai-phat-trien-bung-no-20250310160338475.htm",
@@ -2737,6 +2760,37 @@
       },
       {
         "text": "Không cần lo lắng về sự phát triển của AI",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Người trẻ chọn sếp",
+    "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
+    "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao người trẻ lại chọn sếp khi tìm việc?",
+    "answers": [
+      {
+        "text": "Vì họ muốn làm việc với người có khả năng lãnh đạo tốt và phù hợp với phong cách làm việc của mình.",
+        "correct": true
+      },
+      {
+        "text": "Bởi vì họ thích làm việc trong môi trường có nhiều cơ hội thăng tiến.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ ưu tiên lương thưởng cao hơn mọi yếu tố khác.",
+        "correct": false
+      },
+      {
+        "text": "Bởi vì họ không muốn làm việc dưới sự quản lý nghiêm khắc.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ muốn có thời gian làm việc thoải mái.",
         "correct": false
       }
     ]
@@ -2796,6 +2850,33 @@
     ]
   },
   {
+    "title": "Cách phân biệt giữa 'va chạm giao thông' và 'tai nạn giao thông'",
+    "content": "Bài viết phân tích sự khác biệt giữa 'va chạm giao thông' và 'tai nạn giao thông' dựa trên mức độ gây thiệt hại về người và tài sản. Va chạm giao thông được định nghĩa là những sự cố có thiệt hại dưới mức quy định của tai nạn giao thông, như gây thương tích cho một người với tỷ lệ thương tật dưới 11% hoặc thiệt hại tài sản dưới 10 triệu đồng. Ngược lại, tai nạn giao thông có mức độ thiệt hại nghiêm trọng hơn, dẫn đến việc xử lý pháp lý khác nhau, trong đó tai nạn có thể bị truy cứu trách nhiệm hình sự.",
+    "link": "https://vnexpress.net/cach-phan-biet-giua-va-cham-giao-thong-va-tai-nan-giao-thong-4859145.html",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Va chạm giao thông khác tai nạn giao thông như thế nào?",
+    "answers": [
+      {
+        "text": "Va chạm giao thông có thiệt hại nhẹ hơn tai nạn giao thông.",
+        "correct": true
+      },
+      {
+        "text": "Va chạm giao thông luôn gây thiệt hại nặng nề.",
+        "correct": false
+      },
+      {
+        "text": "Tai nạn giao thông xảy ra chỉ với một xe.",
+        "correct": false
+      },
+      {
+        "text": "Va chạm giao thông không bao giờ bị phạt.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bác sĩ vẽ bản đồ tim cứu sản phụ thoát cửa tử",
     "content": "Một sản phụ 36 tuổi đã thoát khỏi nguy cơ tử vong trong ca mổ sinh nhờ vào sự can thiệp kịp thời của bác sĩ. Trong quá trình mang thai, chị gặp phải tình trạng nhịp tim nhanh lên đến 190 lần/phút và không đáp ứng với thuốc điều trị. Các bác sĩ đã sử dụng kỹ thuật lập bản đồ tim 3D để xác định nguyên nhân và thực hiện đốt điện giúp nhịp tim trở lại bình thường, đảm bảo sự an toàn cho cả mẹ và bé.",
     "link": "https://vnexpress.net/bac-si-ve-ban-do-tim-cuu-san-phu-thoat-cua-tu-4858948.html",
@@ -2822,33 +2903,6 @@
       },
       {
         "text": "Không thực hiện mổ mà chỉ theo dõi tình trạng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cách phân biệt giữa 'va chạm giao thông' và 'tai nạn giao thông'",
-    "content": "Bài viết phân tích sự khác biệt giữa 'va chạm giao thông' và 'tai nạn giao thông' dựa trên mức độ gây thiệt hại về người và tài sản. Va chạm giao thông được định nghĩa là những sự cố có thiệt hại dưới mức quy định của tai nạn giao thông, như gây thương tích cho một người với tỷ lệ thương tật dưới 11% hoặc thiệt hại tài sản dưới 10 triệu đồng. Ngược lại, tai nạn giao thông có mức độ thiệt hại nghiêm trọng hơn, dẫn đến việc xử lý pháp lý khác nhau, trong đó tai nạn có thể bị truy cứu trách nhiệm hình sự.",
-    "link": "https://vnexpress.net/cach-phan-biet-giua-va-cham-giao-thong-va-tai-nan-giao-thong-4859145.html",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Va chạm giao thông khác tai nạn giao thông như thế nào?",
-    "answers": [
-      {
-        "text": "Va chạm giao thông có thiệt hại nhẹ hơn tai nạn giao thông.",
-        "correct": true
-      },
-      {
-        "text": "Va chạm giao thông luôn gây thiệt hại nặng nề.",
-        "correct": false
-      },
-      {
-        "text": "Tai nạn giao thông xảy ra chỉ với một xe.",
-        "correct": false
-      },
-      {
-        "text": "Va chạm giao thông không bao giờ bị phạt.",
         "correct": false
       }
     ]
@@ -2974,33 +3028,6 @@
     ]
   },
   {
-    "title": "Đời buồn của cậu bé ước được đến trường",
-    "content": "Bình An, 9 tuổi, mơ ước được đến trường nhưng đang phải đối mặt với căn bệnh ung thư máu. Gia đình cậu sống trong hoàn cảnh khó khăn, với thu nhập thấp và không đủ khả năng chi trả cho việc điều trị. Dù gặp nhiều khó khăn, mẹ cậu, chị Cẩm Tuyết, vẫn không từ bỏ hy vọng và cùng con chiến đấu với bệnh tật. Chương trình Mặt trời Hy vọng được triển khai nhằm hỗ trợ những trẻ em có hoàn cảnh khó khăn như Bình An.",
-    "link": "https://vnexpress.net/doi-buon-cua-cau-be-uoc-duoc-den-truong-4859070.html",
-    "cat": "giao-duc",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Bình An ước mơ điều gì trong cuộc sống?",
-    "answers": [
-      {
-        "text": "Được đến trường",
-        "correct": true
-      },
-      {
-        "text": "Có nhiều bạn bè",
-        "correct": false
-      },
-      {
-        "text": "Có sức khỏe tốt",
-        "correct": false
-      },
-      {
-        "text": "Được đi du lịch",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Con trai Courtois nguy cơ vô gia cư",
     "content": "Elsa Izac, tình cũ của thủ môn Thibaut Courtois, đang đối mặt với nguy cơ bị tịch thu nhà do khoản nợ 63.000 bảng tiền thế chấp. Cô và con trai 7 tuổi, Enzo, sống trong một ngôi nhà trị giá 3 triệu bảng tại Wimbledon, London, nhưng hiện tại đang gặp khó khăn tài chính. Elsa cho rằng Courtois không hỗ trợ đủ cho mẹ con cô, mặc dù thủ môn này có thu nhập hàng triệu USD từ câu lạc bộ Real Madrid.",
     "link": "https://vnexpress.net/con-trai-courtois-nguy-co-vo-gia-cu-4859328.html",
@@ -3023,6 +3050,33 @@
       },
       {
         "text": "Courtois không muốn chu cấp cho họ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đời buồn của cậu bé ước được đến trường",
+    "content": "Bình An, 9 tuổi, mơ ước được đến trường nhưng đang phải đối mặt với căn bệnh ung thư máu. Gia đình cậu sống trong hoàn cảnh khó khăn, với thu nhập thấp và không đủ khả năng chi trả cho việc điều trị. Dù gặp nhiều khó khăn, mẹ cậu, chị Cẩm Tuyết, vẫn không từ bỏ hy vọng và cùng con chiến đấu với bệnh tật. Chương trình Mặt trời Hy vọng được triển khai nhằm hỗ trợ những trẻ em có hoàn cảnh khó khăn như Bình An.",
+    "link": "https://vnexpress.net/doi-buon-cua-cau-be-uoc-duoc-den-truong-4859070.html",
+    "cat": "giao-duc",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Bình An ước mơ điều gì trong cuộc sống?",
+    "answers": [
+      {
+        "text": "Được đến trường",
+        "correct": true
+      },
+      {
+        "text": "Có nhiều bạn bè",
+        "correct": false
+      },
+      {
+        "text": "Có sức khỏe tốt",
+        "correct": false
+      },
+      {
+        "text": "Được đi du lịch",
         "correct": false
       }
     ]
@@ -4341,64 +4395,6 @@
       },
       {
         "text": "Vì chúng không được sử dụng rộng rãi.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nhiều người lo mất tiền cọc, đền hợp đồng khi cấm cho thuê căn hộ lưu trú ngắn ngày",
-    "content": "Sau khi UBND TP.HCM ban hành quyết định cấm cho thuê căn hộ lưu trú ngắn ngày, nhiều cư dân cung cấp dịch vụ Airbnb đang lo lắng về việc mất tiền cọc và phí hợp đồng. Họ đã đầu tư hàng trăm triệu đồng vào nội thất và cơ sở vật chất cho các căn hộ này, và giờ phải đối mặt với nguy cơ thiệt hại tài chính lớn. Các cư dân đã gửi đơn xin gia hạn thời gian hoạt động để có thể sắp xếp đền bù cho khách hàng và thanh lý cơ sở vật chất đã đầu tư.",
-    "link": "https://tuoitre.vn/nhieu-nguoi-lo-mat-tien-coc-den-hop-dong-khi-cam-cho-thue-can-ho-luu-tru-ngan-ngay-20250310145929841.htm",
-    "cat": "kinh-doanh",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao cư dân cho thuê căn hộ lại lo lắng khi bị cấm cho thuê lưu trú ngắn ngày?",
-    "answers": [
-      {
-        "text": "Họ sợ mất tiền cọc và thiệt hại tài chính.",
-        "correct": true
-      },
-      {
-        "text": "Họ không muốn thuê dài hạn nữa.",
-        "correct": false
-      },
-      {
-        "text": "Họ muốn mở dịch vụ mới.",
-        "correct": false
-      },
-      {
-        "text": "Họ không có khách hàng nào.",
-        "correct": false
-      },
-      {
-        "text": "Họ không thích làm việc với cơ quan chức năng.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hợp đồng dầu hạt cải và dầu thô tại Trung Quốc tăng vọt sau khi áp thuế 100% với Canada",
-    "content": "Sau khi Trung Quốc áp thuế 100% đối với dầu hạt cải nhập khẩu từ Canada, số lượng hợp đồng dầu hạt cải và dầu thô tại nước này đã tăng mạnh. Giá dầu hạt cải tại Trịnh Châu tăng 5,2% lên 9.213 Nhân dân tệ một tấn, trong khi giá dầu thô cũng ghi nhận mức tăng 6%. Biện pháp này được xem như là phản ứng thương mại đối với các chính sách thuế quan của Canada nhằm vào hàng hóa Trung Quốc, làm căng thẳng giữa hai quốc gia gia tăng.",
-    "link": "https://tuoitre.vn/hop-dong-dau-hat-cai-va-dau-tho-tai-trung-quoc-tang-vot-sau-khi-ap-thue-100-voi-canada-20250310145632858.htm",
-    "cat": "kinh-doanh",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao số lượng hợp đồng dầu hạt cải và dầu thô tại Trung Quốc tăng mạnh?",
-    "answers": [
-      {
-        "text": "Do Trung Quốc áp thuế 100% đối với dầu hạt cải nhập từ Canada.",
-        "correct": true
-      },
-      {
-        "text": "Vì giá dầu trên thị trường quốc tế tăng cao.",
-        "correct": false
-      },
-      {
-        "text": "Do nhu cầu tiêu thụ dầu hạt cải tại Trung Quốc giảm.",
-        "correct": false
-      },
-      {
-        "text": "Vì Trung Quốc tăng cường nhập khẩu từ các nước khác.",
         "correct": false
       }
     ]
