Update generated content

--- a/home.html
+++ b/home.html
@@ -318,6 +318,87 @@
     ]
   },
   {
+    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
+    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
+    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
+    "answers": [
+      {
+        "text": "Có, nhưng không phải tất cả trường hợp.",
+        "correct": true
+      },
+      {
+        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
+        "correct": false
+      },
+      {
+        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
+    "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
+    "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việc tiêm gộp nhiều vaccine cho trẻ có lợi gì?",
+    "answers": [
+      {
+        "text": "Tạo hiệu quả miễn dịch tốt hơn",
+        "correct": true
+      },
+      {
+        "text": "Giảm chi phí và thời gian tiêm",
+        "correct": false
+      },
+      {
+        "text": "Tăng nguy cơ phản ứng phụ",
+        "correct": false
+      },
+      {
+        "text": "Không cần tiêm vaccine nữa",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lợi ích khi ăn dâu tây thường xuyên",
+    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
+    "answers": [
+      {
+        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
+        "correct": true
+      },
+      {
+        "text": "Tăng huyết áp nhanh chóng.",
+        "correct": false
+      },
+      {
+        "text": "Gây ra tình trạng thừa cân.",
+        "correct": false
+      },
+      {
+        "text": "Làm yếu hệ miễn dịch.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Vì sao người IQ cao hay đau khổ?",
     "content": "Những người có chỉ số IQ cao thường phải đối mặt với nhiều khó khăn trong cuộc sống, bao gồm việc đặt ra kỳ vọng quá cao cho bản thân, dễ lo lắng và cảm thấy cô lập xã hội. Nghiên cứu cho thấy rằng sự thông minh không đồng nghĩa với hạnh phúc, và những người này có thể gặp khó khăn trong việc tìm kiếm kết nối xã hội. Để có hạnh phúc, việc theo đuổi sở thích và đam mê có thể mang lại lợi ích lớn hơn so với thành tích hay IQ.",
     "link": "https://vnexpress.net/vi-sao-nguoi-iq-cao-hay-dau-kho-4859280.html",
@@ -2676,33 +2757,6 @@
     ]
   },
   {
-    "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
-    "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
-    "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
-    "cat": "oto-xe-may",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Tại sao tài xế xe con nên giảm tốc độ khi thấy xe tải đỗ bên đường?",
-    "answers": [
-      {
-        "text": "Để tránh va chạm khi xe tải mở cửa bất ngờ.",
-        "correct": true
-      },
-      {
-        "text": "Để tiết kiệm nhiên liệu.",
-        "correct": false
-      },
-      {
-        "text": "Để tăng tốc độ di chuyển.",
-        "correct": false
-      },
-      {
-        "text": "Để giảm tiếng ồn khi lái xe.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hà Nội cho phép nâng chiều cao khu tập thể Thành Công lên 40 tầng",
     "content": "Hà Nội đã cho phép quận Ba Đình nghiên cứu phương án nâng chiều cao tối đa lên 40 tầng cho khu chung cư cũ Thành Công trong quá trình cải tạo, tái thiết. Quyết định này nhằm kết nối không gian hồ Thành Công với các khu vực xanh và mở rộng trục đường nội khu. Thành phố yêu cầu quận phải hoàn thiện phương án trình Sở Quy hoạch Kiến trúc trước ngày 25/3, trong khi cũng đề xuất nâng cao tầng cho các khu chung cư khác trên địa bàn.",
     "link": "https://vnexpress.net/ha-noi-cho-phep-nang-chieu-cao-khu-tap-the-thanh-cong-len-40-tang-4859359.html",
@@ -2734,37 +2788,6 @@
     ]
   },
   {
-    "title": "Tỷ phú Elon Musk chỉ cách vui vẻ, tự tin học tập dù AI phát triển bùng nổ",
-    "content": "Tỷ phú Elon Musk gần đây đã chia sẻ hai lời khuyên cho những người trẻ trong bối cảnh trí tuệ nhân tạo (AI) phát triển mạnh mẽ, có khả năng thay thế nhiều công việc. Ông khuyến khích giới trẻ nên theo đuổi đam mê và trở nên hữu ích cho cộng đồng. Musk cũng nhấn mạnh tầm quan trọng của nỗ lực lao động để thích ứng với sự thay đổi do AI mang lại, đồng thời khuyến khích mọi người không nên nản lòng trước sự cạnh tranh từ công nghệ.",
-    "link": "https://dantri.com.vn/giao-duc/ty-phu-elon-musk-chi-cach-vui-ve-tu-tin-hoc-tap-du-ai-phat-trien-bung-no-20250310160338475.htm",
-    "cat": "gia-dinh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Elon Musk đã đưa ra những lời khuyên gì cho giới trẻ trong bối cảnh AI phát triển?",
-    "answers": [
-      {
-        "text": "Theo đuổi đam mê và trở nên hữu ích cho cộng đồng",
-        "correct": true
-      },
-      {
-        "text": "Nên từ bỏ ước mơ và tìm một công việc ổn định",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần làm việc ít hơn 6 tiếng mỗi ngày",
-        "correct": false
-      },
-      {
-        "text": "Tập trung vào việc học các công nghệ mới",
-        "correct": false
-      },
-      {
-        "text": "Không cần lo lắng về sự phát triển của AI",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Người trẻ chọn sếp",
     "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
     "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
@@ -2791,6 +2814,64 @@
       },
       {
         "text": "Vì họ muốn có thời gian làm việc thoải mái.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
+    "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
+    "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
+    "cat": "oto-xe-may",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao tài xế xe con nên giảm tốc độ khi thấy xe tải đỗ bên đường?",
+    "answers": [
+      {
+        "text": "Để tránh va chạm khi xe tải mở cửa bất ngờ.",
+        "correct": true
+      },
+      {
+        "text": "Để tiết kiệm nhiên liệu.",
+        "correct": false
+      },
+      {
+        "text": "Để tăng tốc độ di chuyển.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm tiếng ồn khi lái xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tỷ phú Elon Musk chỉ cách vui vẻ, tự tin học tập dù AI phát triển bùng nổ",
+    "content": "Tỷ phú Elon Musk gần đây đã chia sẻ hai lời khuyên cho những người trẻ trong bối cảnh trí tuệ nhân tạo (AI) phát triển mạnh mẽ, có khả năng thay thế nhiều công việc. Ông khuyến khích giới trẻ nên theo đuổi đam mê và trở nên hữu ích cho cộng đồng. Musk cũng nhấn mạnh tầm quan trọng của nỗ lực lao động để thích ứng với sự thay đổi do AI mang lại, đồng thời khuyến khích mọi người không nên nản lòng trước sự cạnh tranh từ công nghệ.",
+    "link": "https://dantri.com.vn/giao-duc/ty-phu-elon-musk-chi-cach-vui-ve-tu-tin-hoc-tap-du-ai-phat-trien-bung-no-20250310160338475.htm",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Elon Musk đã đưa ra những lời khuyên gì cho giới trẻ trong bối cảnh AI phát triển?",
+    "answers": [
+      {
+        "text": "Theo đuổi đam mê và trở nên hữu ích cho cộng đồng",
+        "correct": true
+      },
+      {
+        "text": "Nên từ bỏ ước mơ và tìm một công việc ổn định",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần làm việc ít hơn 6 tiếng mỗi ngày",
+        "correct": false
+      },
+      {
+        "text": "Tập trung vào việc học các công nghệ mới",
+        "correct": false
+      },
+      {
+        "text": "Không cần lo lắng về sự phát triển của AI",
         "correct": false
       }
     ]
@@ -2850,33 +2931,6 @@
     ]
   },
   {
-    "title": "Cách phân biệt giữa 'va chạm giao thông' và 'tai nạn giao thông'",
-    "content": "Bài viết phân tích sự khác biệt giữa 'va chạm giao thông' và 'tai nạn giao thông' dựa trên mức độ gây thiệt hại về người và tài sản. Va chạm giao thông được định nghĩa là những sự cố có thiệt hại dưới mức quy định của tai nạn giao thông, như gây thương tích cho một người với tỷ lệ thương tật dưới 11% hoặc thiệt hại tài sản dưới 10 triệu đồng. Ngược lại, tai nạn giao thông có mức độ thiệt hại nghiêm trọng hơn, dẫn đến việc xử lý pháp lý khác nhau, trong đó tai nạn có thể bị truy cứu trách nhiệm hình sự.",
-    "link": "https://vnexpress.net/cach-phan-biet-giua-va-cham-giao-thong-va-tai-nan-giao-thong-4859145.html",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Va chạm giao thông khác tai nạn giao thông như thế nào?",
-    "answers": [
-      {
-        "text": "Va chạm giao thông có thiệt hại nhẹ hơn tai nạn giao thông.",
-        "correct": true
-      },
-      {
-        "text": "Va chạm giao thông luôn gây thiệt hại nặng nề.",
-        "correct": false
-      },
-      {
-        "text": "Tai nạn giao thông xảy ra chỉ với một xe.",
-        "correct": false
-      },
-      {
-        "text": "Va chạm giao thông không bao giờ bị phạt.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bác sĩ vẽ bản đồ tim cứu sản phụ thoát cửa tử",
     "content": "Một sản phụ 36 tuổi đã thoát khỏi nguy cơ tử vong trong ca mổ sinh nhờ vào sự can thiệp kịp thời của bác sĩ. Trong quá trình mang thai, chị gặp phải tình trạng nhịp tim nhanh lên đến 190 lần/phút và không đáp ứng với thuốc điều trị. Các bác sĩ đã sử dụng kỹ thuật lập bản đồ tim 3D để xác định nguyên nhân và thực hiện đốt điện giúp nhịp tim trở lại bình thường, đảm bảo sự an toàn cho cả mẹ và bé.",
     "link": "https://vnexpress.net/bac-si-ve-ban-do-tim-cuu-san-phu-thoat-cua-tu-4858948.html",
@@ -2903,6 +2957,33 @@
       },
       {
         "text": "Không thực hiện mổ mà chỉ theo dõi tình trạng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cách phân biệt giữa 'va chạm giao thông' và 'tai nạn giao thông'",
+    "content": "Bài viết phân tích sự khác biệt giữa 'va chạm giao thông' và 'tai nạn giao thông' dựa trên mức độ gây thiệt hại về người và tài sản. Va chạm giao thông được định nghĩa là những sự cố có thiệt hại dưới mức quy định của tai nạn giao thông, như gây thương tích cho một người với tỷ lệ thương tật dưới 11% hoặc thiệt hại tài sản dưới 10 triệu đồng. Ngược lại, tai nạn giao thông có mức độ thiệt hại nghiêm trọng hơn, dẫn đến việc xử lý pháp lý khác nhau, trong đó tai nạn có thể bị truy cứu trách nhiệm hình sự.",
+    "link": "https://vnexpress.net/cach-phan-biet-giua-va-cham-giao-thong-va-tai-nan-giao-thong-4859145.html",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Va chạm giao thông khác tai nạn giao thông như thế nào?",
+    "answers": [
+      {
+        "text": "Va chạm giao thông có thiệt hại nhẹ hơn tai nạn giao thông.",
+        "correct": true
+      },
+      {
+        "text": "Va chạm giao thông luôn gây thiệt hại nặng nề.",
+        "correct": false
+      },
+      {
+        "text": "Tai nạn giao thông xảy ra chỉ với một xe.",
+        "correct": false
+      },
+      {
+        "text": "Va chạm giao thông không bao giờ bị phạt.",
         "correct": false
       }
     ]
@@ -3028,33 +3109,6 @@
     ]
   },
   {
-    "title": "Con trai Courtois nguy cơ vô gia cư",
-    "content": "Elsa Izac, tình cũ của thủ môn Thibaut Courtois, đang đối mặt với nguy cơ bị tịch thu nhà do khoản nợ 63.000 bảng tiền thế chấp. Cô và con trai 7 tuổi, Enzo, sống trong một ngôi nhà trị giá 3 triệu bảng tại Wimbledon, London, nhưng hiện tại đang gặp khó khăn tài chính. Elsa cho rằng Courtois không hỗ trợ đủ cho mẹ con cô, mặc dù thủ môn này có thu nhập hàng triệu USD từ câu lạc bộ Real Madrid.",
-    "link": "https://vnexpress.net/con-trai-courtois-nguy-co-vo-gia-cu-4859328.html",
-    "cat": "the-thao",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao con trai Courtois và Elsa Izac lại gặp nguy cơ vô gia cư?",
-    "answers": [
-      {
-        "text": "Họ có khoản nợ 63.000 bảng tiền thế chấp.",
-        "correct": true
-      },
-      {
-        "text": "Họ không có đủ tiền chi tiêu hàng ngày.",
-        "correct": false
-      },
-      {
-        "text": "Ngôi nhà của họ bị hư hỏng nặng.",
-        "correct": false
-      },
-      {
-        "text": "Courtois không muốn chu cấp cho họ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đời buồn của cậu bé ước được đến trường",
     "content": "Bình An, 9 tuổi, mơ ước được đến trường nhưng đang phải đối mặt với căn bệnh ung thư máu. Gia đình cậu sống trong hoàn cảnh khó khăn, với thu nhập thấp và không đủ khả năng chi trả cho việc điều trị. Dù gặp nhiều khó khăn, mẹ cậu, chị Cẩm Tuyết, vẫn không từ bỏ hy vọng và cùng con chiến đấu với bệnh tật. Chương trình Mặt trời Hy vọng được triển khai nhằm hỗ trợ những trẻ em có hoàn cảnh khó khăn như Bình An.",
     "link": "https://vnexpress.net/doi-buon-cua-cau-be-uoc-duoc-den-truong-4859070.html",
@@ -3077,6 +3131,33 @@
       },
       {
         "text": "Được đi du lịch",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Con trai Courtois nguy cơ vô gia cư",
+    "content": "Elsa Izac, tình cũ của thủ môn Thibaut Courtois, đang đối mặt với nguy cơ bị tịch thu nhà do khoản nợ 63.000 bảng tiền thế chấp. Cô và con trai 7 tuổi, Enzo, sống trong một ngôi nhà trị giá 3 triệu bảng tại Wimbledon, London, nhưng hiện tại đang gặp khó khăn tài chính. Elsa cho rằng Courtois không hỗ trợ đủ cho mẹ con cô, mặc dù thủ môn này có thu nhập hàng triệu USD từ câu lạc bộ Real Madrid.",
+    "link": "https://vnexpress.net/con-trai-courtois-nguy-co-vo-gia-cu-4859328.html",
+    "cat": "the-thao",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao con trai Courtois và Elsa Izac lại gặp nguy cơ vô gia cư?",
+    "answers": [
+      {
+        "text": "Họ có khoản nợ 63.000 bảng tiền thế chấp.",
+        "correct": true
+      },
+      {
+        "text": "Họ không có đủ tiền chi tiêu hàng ngày.",
+        "correct": false
+      },
+      {
+        "text": "Ngôi nhà của họ bị hư hỏng nặng.",
+        "correct": false
+      },
+      {
+        "text": "Courtois không muốn chu cấp cho họ.",
         "correct": false
       }
     ]
